--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/HenryFrontend/Movie-Source-Data/issues"
   },
-  "homepage": "https://github.com/HenryFrontend/Movie-Source-Data#readme"
+  "homepage": "https://github.com/HenryFrontend/Movie-Source-Data#readme",
+  "dependencies": {
+    "json-server": "^0.17.0"
+  }
 }
